# DAT154

Assignment 0/: Assignment 0.sln
Assignment 0/Task1/: Task1.cpp  Task1.vcxproj
Assignment 0/Task10/: Task10.cpp  Task10.rc  Task10.vcxproj  (+2 more)
Assignment 1/: Assignment 1.sln
Assignment 1 Solution/: TrafficLightExample.sln
Assignment 2/: Assignment 2.sln  Planets.xlsx
Assignment 2 Solution/: SpaceSimulator.sln
Assignment 3/: .gitignore  Assignment 3.sln
Assignment 3 Solution/: Assignment 3.sln
Lecture 01/: CMakeLists.txt  Lecture1.sln
Lecture 01 - DEMO/: CMakeLists.txt  myprog1.vcxproj
Lecture 02/: CMakeLists.txt  Lecture 02.sln
Lecture 02 - Examples/: CMakeLists.txt  Lecture 02 - Examples.cpp  Lecture 02 - Examples.sln
Lecture 03/: CMakeLists.txt  Lecture 03.sln  Lecture3.sln
Lecture 04/: CMakeLists.txt  Lecture 04.sln
Lecture 05/: Lecture 05.sln
Lecture 06/: Lecture 06.sln
Lecture 07/: Lecture - 07 - Graphics in SDK.sln
Lecture 08/: Lecture 08.sln
Lecture 10/: Lecture 10.sln
Lecture 12/: Lecture 12.sln
Lecture 14/: Lecture 14 - GUI Options.sln
Lecture 15/: Lecture 15 - Delegates and Events.sln
Lecture 16/: Lecture 16 - Graphics in .net.sln
Lecture 17/: Lecture 17 - Event Handling.sln
Lecture 18/: Software Architecture.sln
Lecture 19/: Lecture 19 - Examples.sln
Lecture 21/: Lecture 21 - Examples.sln
Lecture 22/: .gitignore  Lecture 22 - Linq and Databases 1.sln
Lecture 23/: Lecture 23 - Linq and Databases 2.sln
Lecture 24/: Lecture 24 - Web Development.sln
Lecture 25/: Lecture 25 - Web Development ASP.NET 2.sln
(+552 files in other folders)
